k8s/practice/apache-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: webport
    nodePort: 31000
  selector:
    apache: web
