k8s/practice/nginx-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: nginx-port
    nodePort: 32000
  selector:
    nginx: web
